cmake_minimum_required(VERSION 3.16.2)
project(project5)
include_directories(. ./Server/include)
add_subdirectory(./Server)
aux_source_directory(. DIRSRC)
find_package(SQLite3)
if(SQLite3_FOUND)
    message(STATUS, "libsqlite3 found!")
else(SQLite3_FOUND)
    message(FATAL_ERROR, "libsqlite3 not found!")
endif(SQLite3_FOUND)
add_executable(${PROJECT_NAME} ${DIRSRC})
target_link_libraries(${PROJECT_NAME} server pthread)