cmake_minimum_required(VERSION 3.16.2)
project(project6 VERSION 0.1)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
configure_file(version.h.in version.h)
include_directories(. ./hello)
aux_source_directory(. DIRSRC)
add_subdirectory(hello)
add_executable(${PROJECT_NAME} ${DIRSRC})
target_link_libraries(${PROJECT_NAME} hello)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR})